# safe-rm

./: AGENTS.md  Cargo.toml  Makefile  README.ja.md  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  error.rs  git_checker.rs  init.rs  lib.rs  main.rs  path_checker.rs
tests/: integration_test.rs
