[package]
name = "safe-rm"
version = "26.1.100"
edition = "2021"
rust-version = "1.70"
authors = ["owayo <yoheiowa@gmail.com>"]
description = "Secure deletion proxy for Claude Code PreToolUse hooks with spatial containment and VCS safety"
license = "MIT"
repository = "https://github.com/owayo/safe-rm"
keywords = ["rm", "delete", "safety", "ai", "agent", "claude"]
categories = ["command-line-utilities"]

[lib]
name = "safe_rm"
path = "src/lib.rs"

[[bin]]
name = "safe-rm"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5.54", features = ["derive"] }

# Shell command tokenization
shlex = "1.3.0"

# Path normalization
path-clean = "1.0.1"

# Git operations (vendored for cross-compilation on CI)
git2 = { version = "0.20.3", features = ["vendored-libgit2", "vendored-openssl"] }

# Error handling
anyhow = "1.0.100"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.24.0"

[profile.release]
lto = true
strip = true
